; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_bt-bmc.c_clr_b_busy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_bt-bmc.c_clr_b_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bt_bmc = type { i32 }

@BT_CTRL = common dso_local global i32 0, align 4
@BT_CTRL_B_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bt_bmc*)* @clr_b_busy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clr_b_busy(%struct.bt_bmc* %0) #0 {
  %2 = alloca %struct.bt_bmc*, align 8
  store %struct.bt_bmc* %0, %struct.bt_bmc** %2, align 8
  %3 = load %struct.bt_bmc*, %struct.bt_bmc** %2, align 8
  %4 = load i32, i32* @BT_CTRL, align 4
  %5 = call i32 @bt_inb(%struct.bt_bmc* %3, i32 %4)
  %6 = load i32, i32* @BT_CTRL_B_BUSY, align 4
  %7 = and i32 %5, %6
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.bt_bmc*, %struct.bt_bmc** %2, align 8
  %11 = load i32, i32* @BT_CTRL_B_BUSY, align 4
  %12 = load i32, i32* @BT_CTRL, align 4
  %13 = call i32 @bt_outb(%struct.bt_bmc* %10, i32 %11, i32 %12)
  br label %14

14:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @bt_inb(%struct.bt_bmc*, i32) #1

declare dso_local i32 @bt_outb(%struct.bt_bmc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
